--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a target="fm" href="/user/user_info.html">基本资料</a></dd>
+              <dd><a target="fm" href="/user/user_cropper.html">更换头像</a></dd>
+              <dd><a target="fm" href="/user/user_pwd.html">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item"><a href="javascript:;" id="loginout"><i class="iconfont icon-tuichu tuichu"></i>退出</a></li>
@@ -58,9 +58,9 @@
             <li class="layui-nav-item">
                 <a href="javascript:;"><i class="iconfont icon-user"></i>个人中心</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                    <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                    <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                    <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                    <dd><a href="/user/user_cropper.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                    <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
                 </dl>
             </li>
             <!-- <li class="layui-nav-item"><a href="">发布商品</a></li> -->
